Borre la otra forma de listar una tarea. Cree una forma mas facil para poder usar los botones

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Todo List:</h1>
     <form action="" id="form">
         <input type="text" placeholder="Escriba su tarea ..." id="input">
-        <button type="submit" onclick="listar()">Listar</button>
+        <button type="submit" id="listarTarea">Listar</button>
     </form>
     <ul id="ul">
 
