--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <ul id="ul">
 
     </ul>
+
+    <button type="submit" id="modoNocturno">Dia/Noche</button>
     <script src="main.js"></script>
 </body>
 </html>
